--- a/src/common-components/AdSlideshow.css
+++ b/src/common-components/AdSlideshow.css
@@ -6,7 +6,7 @@
   max-height: 100%;
   overflow: hidden;
   border-radius: 4px;
-  background-color: #000000;
+  background-color: #340b56;
   border: 1px solid #dadce0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.08);
   display: flex;
