--- a/src/page-main/PageMain.css
+++ b/src/page-main/PageMain.css
@@ -204,14 +204,25 @@ p {
 /* Mobile: Center elements and hide ads */
 @media (max-width: 899px) {
   .random-button-cell {
-    text-align: center;
+    display: none;
   }
 
   .random-oc-button-section {
     margin-top: 0;
   }
 
+  .random-button-mobile {
+    margin-top: 40px;
+  }
+
   .ad-cell {
+    display: none;
+  }
+}
+
+/* Desktop: Hide mobile random button section */
+@media (min-width: 900px) {
+  .random-button-mobile {
     display: none;
   }
 }
