--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,13 @@
   background-color: rgba(106, 255, 168, 0.6);
 }
 
+.div-3d-with-shadow-borderless {
+  box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
+    0 0 20px rgba(52, 11, 86, 0.6);
+  border-radius: 4px;
+  background-color: rgba(106, 255, 168, 0.6);
+}
+
 .button-3d-with-shadow {
   box-shadow: 0px 4px 0px rgb(52, 11, 86), 4px 4px 0px rgb(52, 11, 86),
     0 0 20px rgba(52, 11, 86, 0.6);
