--- a/src/common-components/AvatarSlideshow.css
+++ b/src/common-components/AvatarSlideshow.css
@@ -1,6 +1,37 @@
 /* AvatarSlideshow inherits styling from whatever className is passed to it */
-/* Softer fading effect for avatar transitions */
-.avatar-slideshow-fade {
+
+/* Container for the slideshow to enable overlay effect */
+.avatar-slideshow-container {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+/* Purple flash overlay effect for avatar transitions */
+@keyframes avatar-flash-purple {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.85;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.avatar-slideshow-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ff0000;
+  pointer-events: none;
   opacity: 0;
-  transition: opacity 0.8s ease-in-out;
+  border-radius: inherit;
+}
+
+.avatar-slideshow-overlay.flashing {
+  animation: avatar-flash-purple 0.6s ease-in-out;
 }
