--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   z-index: -1;
   pointer-events: none;
 }
@@ -39,8 +39,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   z-index: -3;
   pointer-events: none;
 }
@@ -48,7 +48,7 @@
 .main-content {
   position: relative;
   z-index: 1;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -93,8 +93,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   pointer-events: none;
   z-index: 9998;
   opacity: 0.12;
