--- a/src/nav-bar/NavBar.css
+++ b/src/nav-bar/NavBar.css
@@ -32,17 +32,17 @@
   display: flex;
   justify-content: center;
   padding: 1rem;
-  background-color: rgb(82, 5, 149, 0.7);
+  background-color: rgba(154, 207, 176, 0.7);
 }
 
 .nav-bar-logo-mobile .logo {
-  height: 5rem;
+  height: 7rem;
 }
 
 /* Increase mobile logo size on small tablets */
 @media (min-width: 640px) {
   .nav-bar-logo-mobile .logo {
-    height: 6rem;
+    height: 8rem;
   }
 }
 
